[STYLES] Se mejoraron los estilos
Se crearon animaciones y patterns para el fondo

--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -4,4 +4,22 @@
       Hola <span>{{ username }}</span>
     </h2>
   </div>
+  <div class="animation-area">
+    <ul class="box-area">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+  <div class="animation-area-two">
+    <ul class="box-area-two">
+      <li></li>
+    </ul>
+  </div>
 </div>
