--- a/src/app/ui/shared/footer/footer.component.html
+++ b/src/app/ui/shared/footer/footer.component.html
@@ -1,14 +1,16 @@
 <footer class="footer">
   <div class="footer-content">
     <div class="footer-content_logo">
-      <img src="./assets/logo.svg" alt="Logo de la aplicacion"/>
+      <img src="./assets/logo.svg" alt="Logo de la aplicacion" />
     </div>
     <div class="footer-content_rows">
       <div class="footer-content_rows-item">
         <h3>Nosotros</h3>
         <p>
-          Creamos soluciones en beneficio de nuestra sociedad, aplicando conocimientos y habilidades adquiridas,
-          buscando siempre el aprendizaje continuo que satisface las necesidades de nuestros clientes.
+          Creamos soluciones en beneficio de nuestra sociedad, aplicando
+          conocimientos y habilidades adquiridas, buscando siempre el
+          aprendizaje continuo que satisface las necesidades de nuestros
+          clientes.
         </p>
       </div>
       <div class="footer-content_rows-item">
