--- a/src/app/ui/styles/index.scss
+++ b/src/app/ui/styles/index.scss
@@ -5,3 +5,4 @@
 @forward "./break-points" as bkp-*;
 @forward "./colors" as color-*;
 @forward "./fonts" as font-*;
+@forward "./patterns" as pat-*;
