[FEAT] Tabla para listar usuarios
Se creo la tabla donde se listara la informacion de todos los usuarios

HU-Interfaz para el panel del super admin.

--- a/src/app/ui/tabs/list-user/list-user.component.html
+++ b/src/app/ui/tabs/list-user/list-user.component.html
@@ -1,1 +1,39 @@
-<p>list-user works!</p>
+<div class="list-users">
+  <div class="list-users_content">
+    <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Correo</th>
+          <th>Verificación</th>
+          <th>Disponibilidad</th>
+          <th>Rol</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <span>NB</span>
+            Username
+          </td>
+          <td>
+            <span>CR</span>
+            Email
+          </td>
+          <td>
+            <span>VR</span>
+            <i class="fas fa-check-circle check"></i>
+          </td>
+          <td>
+            <span>DP</span>
+            <i class="fas fa-times-circle times"></i>
+          </td>
+          <td>
+            <span>Rol</span>
+            User rol
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
