[FEAT] Servicio para listar toda la informacion de los usuarios
Se creo el servicio que obtiene toda la informacion de los usuarios y se listo la informacion en el panel de super admin

HU-Interfaz para el panel del super admin.

--- a/src/app/ui/tabs/list-user/list-user.component.html
+++ b/src/app/ui/tabs/list-user/list-user.component.html
@@ -11,26 +11,26 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr *ngFor="let user of users">
           <td>
             <span>NB</span>
-            Username
+            {{ user.name }}
           </td>
           <td>
             <span>CR</span>
-            Email
+            {{ user.email }}
           </td>
           <td>
             <span>VR</span>
-            <i class="fas fa-check-circle check"></i>
+            <i [class]="showIcon(user.verification)"></i>
           </td>
           <td>
             <span>DP</span>
-            <i class="fas fa-times-circle times"></i>
+            <i [class]="showIcon(user.availability)"></i>
           </td>
           <td>
             <span>Rol</span>
-            User rol
+            {{ user.rol }}
           </td>
         </tr>
       </tbody>
