--- a/src/app/ui/shared/navbar/navbar.component.html
+++ b/src/app/ui/shared/navbar/navbar.component.html
@@ -16,7 +16,7 @@
       </div>
       <span>{{ userInfo }} </span><span class="sp">|</span>
       <span class="rol" (click)="showAndHideOptions($event)"
-        > Rol <i class="fas fa-angle-down"></i
+        > <span class="capitalize">{{rol}}</span> <i class="fas fa-angle-down"></i
       ></span>
 
       <ul class="options" id="options">
@@ -25,7 +25,7 @@
         <!-- Usuario -->
         <li><i class="fas fa-tasks"></i> Mi progreso</li>
         <!-- Super Admin - Root -->
-        <li><i class="fas fa-users-cog"></i> Super Admin</li>
+        <li *ngIf="rol === 'root'" [routerLink]="['/dashboard/root']"><i class="fas fa-users-cog"></i> Super Admin</li>
         <!-- Admin -->
         <li><i class="fas fa-user-cog"></i> Admin</li>
       </ul>
