--- a/src/app/ui/shared/navbar/navbar.component.html
+++ b/src/app/ui/shared/navbar/navbar.component.html
@@ -27,7 +27,7 @@
         <!-- Super Admin - Root -->
         <li *ngIf="rol === 'root'" [routerLink]="['/dashboard/root']"><i class="fas fa-users-cog"></i> Super Admin</li>
         <!-- Admin -->
-        <li><i class="fas fa-user-cog"></i> Admin</li>
+        <li *ngIf="rol === 'admin'" [routerLink]="['/dashboard/admin']"><i class="fas fa-user-cog"></i> Admin</li>
       </ul>
     </div>
     <li class="navbar-public_navigation-item" (click)="logout()">
