--- a/src/app/ui/styles/_animations.scss
+++ b/src/app/ui/styles/_animations.scss
@@ -151,11 +151,11 @@ $bezier-navbar: all 0.6s cubic-bezier(0.17, 0.67, 0.8, 0.62);
   @keyframes animate {
     0% {
       opacity: 1;
-      transform: translateY(0) rotate(0deg);
+      transform: translateY(0) rotate3d(0, 0, 25, 0deg);
     }
     100% {
       opacity: 0;
-      transform: translateY(-800px) rotate(360deg);
+      transform: translateY(-800px) rotate3d(30, 40, 25, 360deg);
     }
   }
 }
