--- a/src/app/ui/tabs/create-user/create-user.component.html
+++ b/src/app/ui/tabs/create-user/create-user.component.html
@@ -132,14 +132,7 @@
       <button
         class="btn-general-form"
         type="submmit"
-        [class.disabled]="
-          name.invalid ||
-          email.invalid ||
-          passwordConfirmation.value !== password.value ||
-          password.invalid ||
-          passwordConfirmation.invalid ||
-          rol.invalid
-        "
+        [class.disabled]="signUpForm.invalid"
       >
         Crear
       </button>
