[FIX] Correción Documentación
Se corrige la forma en cómo se estaban haciendo los comentarios en el proyecto

--- a/src/app/ui/components/forgot-password/forgot-password.component.html
+++ b/src/app/ui/components/forgot-password/forgot-password.component.html
@@ -25,7 +25,7 @@
           class="message-error"
           *ngIf="email.value && email.invalid && email.touched"
         >
-          El correo es inválido
+          El correo es inválido.
         </div>
       </div>
       <button
@@ -38,7 +38,7 @@
     </form>
     <div class="form-footer">
       <p>¿Quieres regresar?</p>
-      <a [routerLink]="'/'"> ir al inicio de sesión.</a>
+      <a [routerLink]="'/'"> Ir al inicio de sesión.</a>
     </div>
   </div>
 </div>
