--- a/src/app/ui/components/signin/signin.component.html
+++ b/src/app/ui/components/signin/signin.component.html
@@ -22,7 +22,7 @@
           class="message-error"
           *ngIf="email.value && email.invalid && email.touched"
         >
-          El correo es inválido
+          El correo es inválido.
         </div>
       </div>
       <div class="form-group">
@@ -44,7 +44,7 @@
           class="message-error"
           *ngIf="password.value && password.invalid && password.touched"
         >
-          La contraseña debe tener al menos 6 carácteres.
+          La contraseña debe tener al menos 6 caracteres.
         </div>
       </div>
       <button
