--- a/src/app/ui/components/admin/admin.component.html
+++ b/src/app/ui/components/admin/admin.component.html
@@ -24,4 +24,17 @@
       </div>
     </div>
   </div>
+  <div class="animation-area_two">
+    <ul class="box-area_two">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
 </div>
