--- a/src/app/ui/styles/_animations.scss
+++ b/src/app/ui/styles/_animations.scss
@@ -1,3 +1,5 @@
+@use "./patterns" as pat;
+
 $bezier: all 0.2s cubic-bezier(0.17, 0.67, 0.8, 0.62);
 $bezier-navbar: all 0.6s cubic-bezier(0.17, 0.67, 0.8, 0.62);
 
@@ -53,7 +55,7 @@ $bezier-navbar: all 0.6s cubic-bezier(0.17, 0.67, 0.8, 0.62);
   }
 }
 
-@mixin banner-slide {
+@mixin animation-bg {
   .animation-area {
     height: 100%;
     width: 100%;
@@ -71,8 +73,22 @@ $bezier-navbar: all 0.6s cubic-bezier(0.17, 0.67, 0.8, 0.62);
   .box-area li {
     animation: animate 10s linear infinite;
     background-color: #f1f1f1;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%2315187e' fill-opacity='0.4'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    box-shadow: inset -4px -4px 20px 0 #4e4c6bcc,
+    clip-path: polygon(
+      0% 15%,
+      15% 15%,
+      15% 0%,
+      85% 0%,
+      85% 15%,
+      100% 15%,
+      100% 85%,
+      85% 85%,
+      85% 100%,
+      15% 100%,
+      15% 85%,
+      0% 85%
+    );
+    @include pat.general;
+    box-shadow: inset -4px -4px 20px 0 #f1f1f1cc,
       inset 4px 4px 20px 0 rgba(0, 0, 0, 0.8);
     bottom: -180px;
     display: block;
@@ -156,6 +172,125 @@ $bezier-navbar: all 0.6s cubic-bezier(0.17, 0.67, 0.8, 0.62);
     100% {
       opacity: 0;
       transform: translateY(-800px) rotate3d(30, 40, 25, 360deg);
+    }
+  }
+}
+
+@mixin animation-bg_two {
+  .animation-area_two {
+    height: 100%;
+    width: 100%;
+  }
+
+  .box-area_two {
+    height: 100%;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+
+  .box-area_two li {
+    animation: animate-two 10s linear infinite;
+    background-color: #f1f1f1;
+    clip-path: polygon(
+      50% 0%,
+      61% 35%,
+      98% 35%,
+      68% 57%,
+      79% 91%,
+      50% 70%,
+      21% 91%,
+      32% 57%,
+      2% 35%,
+      39% 35%
+    );
+    @include pat.admin;
+    box-shadow: inset -4px -4px 20px 0 #f1f1f1cc,
+      inset 4px 4px 20px 0 rgba(0, 0, 0, 0.8);
+    bottom: -180px;
+    display: block;
+    height: 25px;
+    list-style: none;
+    position: absolute;
+    width: 25px;
+  }
+
+  .box-area_two li:nth-child(1) {
+    animation-delay: 0s;
+    height: 80px;
+    left: 2%;
+    width: 80px;
+  }
+
+  .box-area_two li:nth-child(2) {
+    animation-duration: 10s;
+    animation-delay: 1.5s;
+    height: 30px;
+    left: 12%;
+    width: 30px;
+  }
+
+  .box-area_two li:nth-child(3) {
+    animation-delay: 5.5s;
+    height: 100px;
+    left: 90%;
+    width: 100px;
+  }
+
+  .box-area_two li:nth-child(4) {
+    animation-duration: 15s;
+    animation-delay: 0s;
+    height: 150px;
+    left: 42%;
+    width: 150px;
+  }
+
+  .box-area_two li:nth-child(5) {
+    animation-delay: 0s;
+    height: 40px;
+    left: 65%;
+    width: 40px;
+  }
+
+  .box-area_two li:nth-child(6) {
+    animation-delay: 3.5s;
+    height: 110px;
+    left: 15%;
+    width: 110px;
+  }
+
+  .box-area_two li:nth-child(7) {
+    animation-duration: 15s;
+    animation-delay: 0s;
+    height: 100px;
+    left: 30%;
+    width: 100px;
+  }
+
+  .box-area_two li:nth-child(8) {
+    animation-delay: 0s;
+    height: 40px;
+    left: 55%;
+    width: 40px;
+  }
+
+  .box-area_two li:nth-child(9) {
+    animation-delay: 3.5s;
+    height: 110px;
+    left: 75%;
+    width: 110px;
+  }
+
+  @keyframes animate-two {
+    0% {
+      opacity: 1;
+      transform: translateY(0) rotate3d(0, 0, 25, 0deg);
+    }
+    100% {
+      opacity: 0;
+      transform: translateY(-800px) rotate3d(30, 80, 50, 720deg);
     }
   }
 }
