--- a/src/app/ui/tabs/create-program/create-program.component.html
+++ b/src/app/ui/tabs/create-program/create-program.component.html
@@ -37,7 +37,7 @@
         <input
           type="text"
           placeholder="Nombre del curso {{ ic + 1 }}"
-          name="course{{ ic }}"
+          name="course{{ ic + 1 }}"
           pattern="[A-Za-z0-9\s]{3,50}"
           required
           [ngModel]
@@ -63,12 +63,12 @@
         </div>
         <div
           class="form-group_child"
-          *ngFor="let module of modules; let im = index"
+          *ngFor="let module of course.modules; let im = index"
         >
           <input
             type="text"
             placeholder="Nombre del modulo {{ im + 1 }}"
-            name="course{{ ic }}-module{{ im }}"
+            name="module{{ im + 1 }}-{{ ic + 1 }}"
             pattern="[A-Za-z0-9\s]{3,50}"
             class="w-50"
             required
@@ -77,6 +77,20 @@
             [class.invalid]="modul.invalid && modul.touched"
             [class.valid]="modul.valid"
           />
+          <select
+            class="w-50"
+            name="module{{ im + 1 }}-{{ ic + 1 }}-duration"
+            required
+            ngModel
+            #duration="ngModel"
+            [class.invalid]="duration.invalid && duration.touched"
+            [class.valid]="duration.valid"
+          >
+            <option value="">Duración del modulo {{ im + 1 }}</option>
+            <option *ngFor="let duration of duratioDays" value="{{ duration }}">
+              {{ duration }} días
+            </option>
+          </select>
           <div class="message-error" *ngIf="!modul.value && modul.touched">
             El nombre del modulo es requerido.
           </div>
@@ -92,33 +106,16 @@
           >
             No se permiten caracteres especiales.
           </div>
-          <select class="w-50">
-            <option value="">Duraccion en dias del modulo {{ im + 1 }}</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="5">5</option>
-          </select>
+          <div
+            class="message-error"
+            *ngIf="!duration.value && duration.touched"
+          >
+            La duración del modulo es requerida.
+          </div>
         </div>
-        <button (click)="addModule()" class="btn-general btn-module">
+        <button (click)="addModule(ic)" class="btn-general btn-module">
           Agregar otro modulo
         </button>
-      </div>
-      <div class="form-group">
-        <input
-          type="date"
-          name="date"
-          required
-          [ngModel]
-          #date="ngModel"
-          [class.invalid]="date.invalid && date.touched"
-          [class.valid]="date.valid"
-        />
-        <div class="message-error" *ngIf="!date.value && date.touched">
-          La fecha de inicio del programa es requerida.
-        </div>
       </div>
       <div class="program-footer">
         <button (click)="addCourse()" class="btn-general">
