[FEAT] Logica para cambiar de pestañas
Se creo la logica para agregar un tiempo de carga y para cambiar de contenido al momento de crear un programa

HU-Creacion de programa.

--- a/src/app/ui/components/admin/admin.component.html
+++ b/src/app/ui/components/admin/admin.component.html
@@ -17,7 +17,12 @@
         <dukes-score-user></dukes-score-user>
       </div>
       <div class="tabs-tab" *ngIf="selected === 'Crear Programa'">
-        <dukes-create-program></dukes-create-program>
+        <dukes-create-program
+          (programCreated)="onIndicatorChangeEdit()"
+        ></dukes-create-program>
+      </div>
+      <div class="tabs-tab" *ngIf="selected === 'Editar Programa'">
+        <dukes-edit-program></dukes-edit-program>
       </div>
       <div class="tabs-tab" *ngIf="selected === 'Progreso Programa'">
         <dukes-program-progress></dukes-program-progress>
